objects/MaintenancePlan.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSL_Is_Active__c</fullName>
        <formula>AND(IF( EndDate &gt; DateValue(now()), True, False),IF( StartDate &lt; DateValue(now()), True, False))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_Is_Linked_To_Service_Contract__c</fullName>
        <formula>NOT(ISBLANK( ServiceContractId ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Linked To Service Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_Same_Date_As_Service_Contract__c</fullName>
        <formula>AND(IF(EndDate = ServiceContract.EndDate,true,false),IF(StartDate = ServiceContract.StartDate,true,false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Same Date As Service Contract</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>Private</sharingModel>
</CustomObject>